<resources>
    <string name="app_name">CoffeeTek</string>
    <string name="all_register">Register</string>
    <string name="all_login">Login</string>
    <string name="fragment_on_boarding_connect_with_facebook">Connect with Facebook</string>
    <string name="fragment_on_boarding_slogans">Get the best coffee in town!</string>
    <string name="fragment_login_welcome_back">Welcome back!</string>
    <string name="all_hint_email">Email</string>
    <string name="all_hint_password">Password</string>
    <string name="all_forgot_password">Forgot password?</string>
    <string name="all_log_in">Login in</string>
    <string name="fragment_login_not_have_an_account_register">Don’t have an account? Register</string>
    <string name="bottom_sheet_fragment_map_view_menu">View menu</string>
    <string name="all_address">Address</string>
    <string name="fragment_register_welcome">Welcome!</string>
    <string name="fragment_register_have_an_account_login">Have an account? Login</string>
    <string name="all_sign_up">Sign up</string>
    <string name="all_hint_re_password">Re-Password</string>
    <string name="all_email_invalid">Email invalid</string>
    <string name="all_field_required">Field required</string>
    <string name="all_password_invalid">Password invalid</string>
    <string name="fragment_register_password_not_match_error">Password not match</string>
</resources>
