<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:background="@android:color/white"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.v7.widget.Toolbar
            android:id="@+id/tool_bar_fragment_login"
            style="@style/CustomToolbar">

        <android.support.v7.widget.AppCompatImageView
                android:id="@+id/iv_fragment_login_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/all_padding_10dp"
                android:minWidth="?attr/actionBarSize"
                android:minHeight="?attr/actionBarSize"
                app:srcCompat="@drawable/all_ic_back_24dp"/>

        <TextView
                style="@style/ToolbarTitle"
                android:layout_marginEnd="?attr/actionBarSize"
                android:text="@string/all_login"/>

    </android.support.v7.widget.Toolbar>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/all_margin_20dp"
            android:layout_marginEnd="@dimen/all_margin_20dp"
            android:layout_marginTop="@dimen/all_margin_30dp">

        <TextView
                android:id="@+id/tv_fragment_login_welcome_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_size_fragment_login_32sp"
                android:text="@string/fragment_login_welcome_back"/>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/ti_layout_fragment_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/all_margin_30dp"
                android:gravity="center"
                android:theme="@style/TextInputLayoutAppearance"
                app:layout_constraintTop_toBottomOf="@id/tv_fragment_login_welcome_back">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/ti_edt_fragment_login_email"
                    style="@style/TextInputEditText"
                    android:nextFocusDown="@id/ti_edt_fragment_login_password"
                    android:hint="@string/all_hint_email"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/ti_layout_fragment_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/all_margin_30dp"
                android:gravity="center"
                android:theme="@style/TextInputLayoutAppearance"
                app:passwordToggleEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/ti_layout_fragment_login_email">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/ti_edt_fragment_login_password"
                    style="@style/TextInputEditText"
                    android:inputType="textPassword"
                    android:hint="@string/all_hint_password"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
                android:id="@+id/tv_fragment_login_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/ti_layout_fragment_login_password"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_14sp"
                android:layout_marginTop="@dimen/all_margin_10dp"
                android:text="@string/fragment_login_forgot_password"/>

        <TextView
                android:id="@+id/tv_fragment_login_btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/all_margin_50dp"
                android:minHeight="@dimen/all_min_height_button"
                android:gravity="center"
                android:textSize="@dimen/text_size_14sp"
                android:background="@drawable/bg_fragment_onboarding_register"
                android:textColor="@android:color/white"
                app:layout_constraintTop_toBottomOf="@id/tv_fragment_login_forgot_password"
                android:text="@string/all_log_in"/>

        <TextView
                android:id="@+id/tv_fragment_login_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/all_margin_10dp"
                android:textSize="@dimen/text_size_14sp"
                app:layout_constraintTop_toBottomOf="@id/tv_fragment_login_btn_login"
                android:text="@string/fragment_login_not_have_an_account_register"/>

    </android.support.constraint.ConstraintLayout>

</LinearLayout>